assets: fix tb overflow on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -937,6 +937,7 @@ figure,
     grid-column: auto;
   }
 
+  .tb,
   .tb li {
     display: flow-root;
   }
